# korean-ime-benchmark

./: CMakeLists.txt  Cargo.toml  README.md  bench.sh
src/: main.c  main.rs
