[package]
name = "korean-ime-benchmark"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk-sys = "0.10.0"
gio-sys = "0.10.1"
glib-sys = "0.10.1"
gobject-sys = "0.10.0"
gtk-sys = "0.10.0"

